Add vbscript analysis to notes

--- a/src/app.html
+++ b/src/app.html
@@ -13,6 +13,11 @@
         padding: 0;
         margin: 0;
       }
+
+      @font-face {
+        font-family: 'dseg7';
+        src: url('/dseg7-cm-bi.woff') format('woff');
+      }
     </style>
 		%sveltekit.head%
 	</head>
