--- a/src/app.html
+++ b/src/app.html
@@ -2,6 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
+    <title>~〜∿n◯w∿〜~</title>
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
     <style>
@@ -9,7 +10,7 @@
         box-sizing: border-box;
       }
 
-      html, body {
+      whtml, body {
         padding: 0;
         margin: 0;
       }
