--- a/src/app.html
+++ b/src/app.html
@@ -10,7 +10,7 @@
         box-sizing: border-box;
       }
 
-      whtml, body {
+      html, body {
         padding: 0;
         margin: 0;
       }
